<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgpSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_tipos_h"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/rbFemenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_tipos_f"
                android:text="@string/mujer" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgpTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/lblTipos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbZapatilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valores_z"
                android:text="@string/zapatilla" />

            <RadioButton
                android:id="@+id/rbClasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valores_c"
                android:text="@string/clasico" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/llValores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/lblProductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNike"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nike"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblcontenido"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pesos"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/lblNikeValor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblNikeCantidad"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nike_cantidad"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/lblnNike"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblAdidas"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adidas"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblcontenido2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pesos"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/lblAdidasValor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblAdidasCantidad"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adidas_cantidad"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/lblnAdidas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="5"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPuma"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puma"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblcontenido3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pesos"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/lblPumasValor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblPumaCantidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puma_cantidad"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/lblnPuma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="calcular_precio"
                    android:text="@string/calcular" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>